[package]
name = "omd"
version = "0.2.3"
edition = "2021"
description = "A minimalistic and slick looking markdown viewer with support for hot reloading and latex"
license = "MIT"
repository = "https://github.com/ptrglbvc/omd"
keywords = ["markdown", "md", "dark-mode"]
categories = ["parsing", "command-line-utilities"]

[profile.release]
lto = true
codegen-units = 1

[dependencies]
pulldown-cmark = "0.12.2"
tempfile = "3.5.0"
clap = { version = "4.4.0", features = ["derive"] }
base64 = "0.22.1"
tokio = { version = "1.28.1", features = ["full"] }
warp = "0.3.3"
async-stream = "0.3.4"
notify = "6.1.1"
futures-util = "0.3.30"
local-ip-address = "0.6.3"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing = "0.1.41"
arboard = "3.4.1"

